3.7/anypoint-platform-for-apis/deploying-your-api-or-proxy.adoc
= Deploying Your API or Proxy

This page describes how to deploy an APIkit project or an API proxy to an API Gateway or other runtime.

== Assumptions

This page assumes that you have done one of the following things:

* Built a new API using link:/docs/display/current/Building+Your+API[APIkit ]
 _or_
* Created an link:/docs/display/current/Proxying+Your+API[auto-generated proxy application] for the endpoint on which your API is hosted (if you want to deploy on premises or manually to CloudHub, you must downloaded it as a .zip file)
 _or_
* Built a link:/docs/display/current/Proxying+Your+API#ProxyingYourAPI-proxymodel[custom proxy application] for the endpoint on which your API is hosted

And that you are ready to deploy it to a Mule runtime or an link:/docs/display/current/Configuring+an+API+Gateway[API Gateway]. (See the next section to determine whether you should deploy to a runtime or a gateway.)

If you are deploying to a Mule on-premises runtime, please follow link:/docs/display/current/Downloading+and+Starting+Mule+ESB[the instructions] to download and install the runtime before proceeding.

If you are deploying to an API Gateway that you are hosting on-premises, please follow the instructions to link:/docs/display/current/Configuring+an+API+Gateway[install and configure] that gateway before proceeding. If you are deploying to a cloud API Gateway, no advanced configuration is required.

If your API is behind a firewall, see link:/docs/display/current/Accessing+Your+API+Behind+a+Firewall[Accessing Your API Behind a Firewall].

== Selecting a Deployment Target

Before you proceed, determine what you have and where you are trying to deploy it.

[width="99a",cols="50a,50a",options="header"]
|===
|If you... |Then deploy to...
|Downloaded a proxy application from the API Version Details page for your API |An API Gateway
|Built your own proxy following the instructions |An API Gateway
|Built an API using APIkit, and your API includes _only_ HTTP/S, Jetty, and/or Web Service Consumer connectors and/or a maximum of two additional connectors |An API Gateway
|Built an API using APIkit, and your API includes one or more connectors _other than_ HTTP/S, Jetty, and/or Web Service Consumer and the allotted two additional connectors |A Mule runtime
|===

Both API Gateways and Mule runtimes have on-premises and cloud versions. Follow the instructions below for your deployment target.

== Deploying

This section gives detailed instructions for deploying Mule applications (whether they are APIkit projects or Mule applications acting as proxies for existing APIs) to your API Gateway instances or Mule runtimes.

Your APIkit project or proxy application should be saved as a deployable zip file. If you created or modified the file in Anypoint Studio:

. Save it and then go to *File* > *Export...*
. Select *Anypoint Studio Project to Mule Deployable Archive (includes Studio metadata)*, and click *Next*.
. Select the name of your application from the *Project* drop-down, and click *Browse...* to select a destination for your application file. Click *Finish* .

[TIP]
====
If your organization has On Premises Auto-Deploy enabled, and you have already link:#[configured your API Gateway for Auto-deployment], then you can also deploy your applications on premises link:/docs/display/current/Managing+Applications+and+Servers+in+the+Cloud+and+On+Premises[via the Anypoint Management Console].
====

=== Deploying to API Gateway

[tabs]
------
[tab,title="On-Prem API Gateway"]
....

. If it is not already running, start your API Gateway in the command line by running:

Windows: `<MULE_HOME>\bin\gateway`

Unix: <`MULE_HOME>/bin/gateway `

Need more detail?

*Starting the API Gateway as a Foreground Process*

. Use the `cd` command to navigate to the `$MULE_HOME/bin` directory.
. Run the startup script according to the options below.

* *Unix:* ` ./gateway`
* *Windows:* ` gateway`

Alternatively, instead of using the `cd` command, type the full path of the script, for example `/opt/mule/api-gateway-1.3.0/bin/gateway`.

When running in foreground mode, the startup script displays information on the terminal's standard output. You will not be able to issue further commands on the terminal as long as the gateway is running.

To stop the gateway, press `CTRL-C` in the terminal in which the script is running.

*Starting the API Gateway as a Background Process*

. Use the `cd` command to navigate to the <`MULE_HOME>/bin` directory.
. Run the startup script according to the options below.

* *Unix:* ` ./gateway start`
* *Windows:* `gateway` `.bat start`

Alternatively, instead of using the `cd` command, type the full path of the script. For example: `/opt/mule/api-gateway-1.3.0/bin/gateway start`.

To stop the gateway, run the script with the `stop` parameter.

[NOTE]
====
*`<MULE_HOME>`* is the value of the MULE_HOME variable employed by MuleSoft's *API Gateway*, usually the root directory of the installation, such as `/opt/Mule/api-gateway-1.3.0/`.
====

. Navigate to the directory where the .zip file is located and copy the .zip file. Ensure that your copy of the file does not have any spaces in the name. 
. Drop the copy of the .zip file into the *`<MULE_HOME>/apps`* folder.
. The API Gateway polls this folder for new applications every five seconds. Watch your command line window to track the progress of the deployment.

image:/docs/download/attachments/122751784/ProxyDeployment.png?version=1&modificationDate=1387497689985[image]

. Congratulations! Your APIkit project or proxy application is deployed to your API Gateway.

Next, return to your API Version Details page. If you deployed your application to a correctly configured API Gateway and set your API URL in the Version Details page to match the inbound endpoint in your application, the Anypoint Platform agent should track your endpoint, and the indicator light should turn green. Read more about link:/docs/display/current/Setting+Your+API+URL[Setting Your API URL].

If you wish to undeploy your application, navigate to the `app` directory and delete the file `your_application.txt`. This removes your application from the `/app` directory, which automatically undeploys it from the API Gateway.

If you wish to update your application at runtime, you can drop a new .zip version of the app into the `<MULE_HOME>/apps` directory. The API Gateway will detect this as an existing app update and will ensure a clean redeployment of the application.

....
[tab,title="On-Prem API Gateway Autodeploy"]
....

[NOTE]
====
This procedure works with API Gateway 2.0 and above.
====

. Register your server in Anypoint Management Center. To register your server, see the simplified instructions below, or the full instructions in the *Add a Server* section of link:/docs/display/current/Managing+Applications+and+Servers+in+the+Cloud+and+On+Premises[Managing Applications and Domains in the Cloud and On-Premises].

*Register a server*

. In Anypoint Management Center, go to *CloudHub*.
. Click the *Servers* tab, then *Add Servers*.
. The Add Servers screen displays a command which includes _*token*_ specifically generated for your gateway. Copy this token to your clipboard.
. In the server where your gateway resides, open a terminal and go to the gateway's `bin` directory.
. Run the following command:

[source]
----
./amc_setup -H <token> <server name>
----

Where `<token>` is the token displayed in the Add Servers screen, and `<server name>` is the name you select for your server.
. Start your gateway.

This should register your server with the Anypoint Management Console.
. If your gateway is not running, start it.

*Start your gateway*

Windows: ` <MULE_HOME>\bin\gateway.bat`

Unix/Linux: `<MULE_HOME>/bin/gateway`

The above commands start the gateway as a foreground process. To start it in the terminal background, issue the `start` parameter, for example `<MULE_HOME>/bin/gateway start`.
. In Anypoint Platform, click *APIs* to go to the API management page.
. Click *Add new API*.
. Anypoint Platform displays the information page for the API, shown below. Under API Status, click *Configure endpoint*.

image:/docs/download/attachments/131039904/conf_api.png?version=1&modificationDate=1436797164286[image]

. In the endpoint configuration screen shown below, fill in the required information for the API you would like to manage.

image:/docs/download/attachments/131039904/conf_endpoint_props.png?version=1&modificationDate=1436797324295[image]

. Click **Save & deploy**. You should see a window like the one shown below.

image:/docs/download/attachments/131039904/deploy_proxy.png?version=2&modificationDate=1436799588910[image]

[TIP]
====
If you don't see your gateway here, it means that its server was not properly registered. In this case, you see a screen like the one shown below.

image:/docs/download/attachments/131039904/no_server.png?version=1&modificationDate=1436809862037[image]

As you can see, the screen gives you the option to add a new API Gateway. See Step 1 link:#DeployingYourAPIorProxy-register[above].
====

. Select your gateway, then click *Deploy proxy*. You should see a status screen like the one below, ending in *Deploy successful*.

image:/docs/download/attachments/131039904/deploying.png?version=1&modificationDate=1436799798424[image]

. After deployment is complete, you should see the API status symbol turn green, for active. At this point, you have successfully auto-deployed your API.

....
[tab,title="Cloud API Gateway - Automatic"]
....

[WARNING]
====
If you want to deploy to CloduHub through this method, you must do it on the same Anypoint Platform account where you have your API registered, and your user must have the appropriate permissions both on CloudHub and on the API Platform. If this is not the case, see the next tab to make a *Manual Deploy* *to CloudHub API Gateway*.

Currently, HTTPS proxies can only be deployed to CloudHub manually.
====

. In your API Administration page, click *Configure Endpoint* under the API Status section
. Tick the box labeled *Configure proxy for CloudHub*.

image:/docs/download/attachments/131039904/deploy+ch.png?version=1&modificationDate=1434055508542[image]

. Notice that, when ticking the box, the *Port* field changes.
. You can click the *Save & Deploy* button to directly deploy your proxy right away. Otherwise, click *Save* and deploy when you're ready.
Notice that after configuring the proxy for CloudHub, a new link labeled *Deploy proxy* appears in the *API Status* section. Use it to open the deploy menu.

image:/docs/download/attachments/131039904/deploy+ch+2.png?version=1&modificationDate=1434055571809[image]

. In the deploy menu, pick an app name (it will use the API name by default) and choose an environment. You must also select an API Gateway version, by default the latest is sleected. +

image:/docs/download/attachments/131039904/Screen+Shot+2015-06-10+at+5.28.09+PM.png?version=1&modificationDate=1434055609059[image]

[NOTE]
====
A link will then be provided to the actual CloudHub application for further management, from there you can then change the worker type, the environment, set advanced settings, etc. Under the API Status section, a new link will appear labeled *Manage CloduHub proxy* that takes you there.
====

. The status of the API deployment is indicated by the marker in the API Status section of the API version page. While the app is starting, you will see a spinner. Once it starts successfully, the light will turn green.

[NOTE]
====
Notice there should now be a new link under the API Status labeled **Re-deploy proxy**. If you make changes to the endpoint configuration you can click this to re-deploy your proxy application to the same CloudHub application.
====

....
[tab,title="Cloud API Gateway - Manual"]
....

. https://cloudhub.io/login.html[Log in] to your CloudHub account.
. First, ensure that you are in the environment that you wish to deploy to. If necessary, click your username, then click *Switch environment* . 
. Once you are in the correct environment, click *Add application*

image:/docs/download/attachments/131039904/add+cloudhub+app.jpg?version=1&modificationDate=1434053008092[image]

. In the Add Application screen, give your application a unique domain name.

[TIP]
====
This domain name forms part of the URLs that applications should use to call your API, so it should represent your API itself.
====

. Click *Choose file* and select the .zip file of your proxy application or APIkit project.
. Open the *Properties* section and define two *Environment Variables* with your Anypoint Platform for APIs client id and client secret, which you can obtain from an Organization Administrator. 

[TIP]
====
To obtain these, log in to the Anypoint Platform as an administrator, click the gear icon at the top-right and then select the *Organization* tab.
====

Copy the following:

[source]
----
anypoint.platform.client_id="[your organization's unique client_id]"
anypoint.platform.client_secret="[your organization's unique client secret]"
----

. Make sure that when deploying your application, you pick the runtime *Gateway 1.3* in the the *Mule Version* field.
. Click *Create*.
. CloudHub automatically moves to the *Logs* view where you can track the status of the deployment. Watch for this message:

image:/docs/download/attachments/122751784/proxyCH-started.png?version=1&modificationDate=1387501329508[image]

. Congratulations! Your application is deployed to your API Gateway.

Next, return to your API Version Details page. If you deployed your application with a valid client id and client secret for your Anypoint Platform organization and set your API URL in the Version Details page to match the inbound endpoint in your application's XML configuration, the Anypoint Platform agent should track your endpoint, and the indicator light should turn green. Read more about link:/docs/display/current/Setting+Your+API+URL[Setting Your API URL].

If you wish to undeploy your application, go to the *Deployment* tab and click *Stop Application*.

If you wish to update your application at runtime, you can upload a new .zip file on the Deployment tab and click *Update*. The API Gateway will perform a zero downtime update using the new application file.

[TIP]
====
If you plan to expose your API through SSL, then there are a couple of link:/docs/display/current/Building+an+HTTPS+Service[additional steps] you need to take.
====

....
------

=== Deploying to Mule ESB

[tabs]
------
[tab,title="On-Prem Mule ESB"]
....

. If it is not already running, start Mule in the command line by running:
Windows: `<MULE_HOME>\bin\mule`
Unix: <`MULE_HOME>/bin/mule `

Need more detail?

*Starting the Mule as a Foreground Process*

. Use the `cd` command to navigate to the `$MULE_HOME/bin` directory.
. Run the startup script according to the options below.

* *Unix:* ` ./mule`
* *Windows:* ` mule`

Alternatively, instead of using the `cd` command, type the full path of the script, for example `/opt/mule/mule-ee-3.6.0/bin/mule`.

When running in foreground mode, the startup script displays information on the terminal's standard output. You will not be able to issue further commands on the terminal as long as Mule is running.

To stop Mule, press `CTRL-C` in the terminal in which the script is running.

*Starting Mule as a Background Process*

. Use the `cd` command to navigate to the <`MULE_HOME>/bin` directory.
. Run the startup script according to the options below.

* *Unix:* `./mule start`
* *Windows:* `mule.bat start`

Alternatively, instead of using the `cd` command, type the full path of the script. For example: `/opt/mule/mule-ee-3.6.0/bin/mule start`.

To stop Mule, run the script with the `stop` parameter.

[NOTE]
====
*`<MULE_HOME`>* is the value of the MULE_HOME variable employed by Mule ESB, usually the root directory of the installation, such as `/opt/Mule/mule-standalone-3.6.0/`.
====

. Navigate to the directory where the proxy .zip file is located and copy the .zip file. Ensure that your copy of the file does not have any spaces in the name. 
. Drop the copy of the .zip file into the *`<MULE_HOME>/apps`* folder.
. Mule polls this folder for new applications every five seconds. Watch your command line window to track the progress of the deployment.

image:/docs/download/attachments/122751784/ProxyDeployment.png?version=1&modificationDate=1387497689985[image]

. Congratulations! Your API is deployed to the Mule runtime.

If you wish to undeploy your application, navigate to the `app` directory and delete the file `your_application.txt`. This removes your application from the `/app` directory, which automatically undeploys it.

If you wish to update your API at runtime, you can drop a new .zip version of the app into the `$MULE_HOME/apps` directory. Mule will detect this as an existing app update and will ensure a clean redeployment of the application.

[TIP]
====
Now that you have deployed your API to a runtime, you will need to link:/docs/display/current/Setting+Your+API+URL[register the endpoint] with the Anypoint Platform, then link:/docs/display/current/Proxying+Your+API[download a proxy] application to deploy to the API Gateway.
====

....
[tab,title="Cloud Mule ESB"]
....

. https://cloudhub.io/login.html[Log in] to your CloudHub account.
. First, ensure that you are in the environment that you wish to deploy to. If necessary, click your username, then click *Switch environment* .
. Once you are in the correct environment, click *Add application*

image:/docs/download/attachments/131039904/add+cloudhub+app.jpg?version=1&modificationDate=1434053008092[image]

. In the New Application screen, give your API a unique domain name.
. Click *Choose File* and select the .zip file of your API.
. Select the latest Mule runtime from the drop-down. (Important: If your API has endpoints other than HTTP, Jetty, and Web Service Consumer, do not select the API Gateway runtime.)
. Click *Create*.
. CloudHub automatically moves to the *Logs* view where you can track the status of the deployment. Watch for this message:

image:/docs/download/attachments/122751784/proxyCH-started.png?version=1&modificationDate=1387501329508[image]

. Congratulations! Your API is deployed.

If you wish to undeploy your application, go to the *Deployment* tab and click *Stop Application*.

If you wish to update your API at runtime, you can upload a new .zip file on the Deployment tab and click *Update*. CloudHub performs a zero downtime update using the new .zip file.

[TIP]
====
Now that you have deployed your API to a runtime, link:/docs/display/current/Setting+Your+API+URL[register the endpoint] with the Anypoint Platform, and link:/docs/display/current/Proxying+Your+API[download a proxy] application to deploy to the API Gateway.
====

[NOTE]
====
If you plan to expose your API through SSL, then there are a couple of link:/docs/display/current/Building+an+HTTPS+Service[additional steps] you need to take.
====

....
------

== See Also

* If you deployed to an API Gateway, return to the API Details Page in Anypoint Platform for APIs to link:/docs/display/current/Managing+Your+API[manage your endpoint] with policies and SLAs.
* If you deployed your API to to a Mule runtime, link:/docs/display/current/Setting+Your+API+URL[set its URL] with the Anypoint Platform, then link:/docs/display/current/Proxying+Your+API[download a proxy]application to deploy to the API Gateway. Return to this page for deployment instructions.
* Learn about link:/docs/display/current/Localhost+Behavior+on+the+API+Gateway[localhost behavior].
* Don't have a proxy application for your API endpoint? link:/docs/display/current/Proxying+Your+API[Learn how to obtain one].
* Learn more about link:/docs/display/current/Building+Your+API[building an API with APIkit].
